Added instance variables in Tasks controller

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,6 @@
-<H1>TODO</H1>
-<ul>
 <% @tasks.each do |task| %>
-    <li><%= task.title %></li>
+  <p>
+    <%= task.id %>
+    <%= task.title %>
+  </p>
 <% end %>
-</ul>
